# Minimal_kernel

./: Cargo.toml  Global Allocator Project Report.markdown  README.md
blog_os/: .gitignore  Cargo.toml  README.md
blog_os/.cargo/: config.toml
blog_os/src/: allocator.rs  fat32.rs  lib.rs  main.rs
blog_os/tests/: basic_boot.rs  fat32.rs  oom.rs  should_panic.rs
src/: allocator.rs  fat32.rs  lib.rs  main.rs  serial.rs
tests/: basic_boot.rs  fat32.rs  oom.rs
