[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "oom"
path = "tests/oom.rs"
harness = false

[dependencies]
bootloader   = "0.9"
volatile     = "0.2.6"
spin         = "0.5.2"
x86_64       = "0.14.2"
uart_16550   = "0.2.0"

[dependencies.lazy_static]
version  = "1.0"
features = ["spin_no_std"]

[features]
default         = []
alloc           = []
oom_integration = []   # â† nouvelle feature
